--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,1 +1,101 @@
-<p>graficas1 works!</p>
+<div class="row">
+
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+
+                <div>
+                    <div>
+
+                        <h4 class="card-title text-center">{{ graficos.grafico1.leyenda }}</h4>
+
+                        <app-grafico-donna [chartLabels]="graficos.grafico1.labels" [chartData]="graficos.grafico1.data" [chartType]="graficos.grafico1.type"></app-grafico-donna>
+                        <!--<div style="display: block">
+                            <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType">
+                        </canvas>
+                        </div>-->
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+
+                <div>
+                    <div>
+
+                        <h4 class="card-title text-center">{{ graficos.grafico2.leyenda }}</h4>
+
+                        <app-grafico-donna [chartLabels]="graficos.grafico2.labels" [chartData]="graficos.grafico2.data" [chartType]="graficos.grafico2.type"></app-grafico-donna>
+                        <!--<div style="display: block">
+                            <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType">
+                        </canvas>
+                        </div>-->
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
+
+
+</div>
+
+<div class="row">
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <h4 class="card-title text-center">{{ graficos.grafico3.leyenda }}</h4>
+
+                <div>
+                    <div>
+                        <app-grafico-donna [chartLabels]="graficos.grafico3.labels" [chartData]="graficos.grafico3.data" [chartType]="graficos.grafico3.type"></app-grafico-donna>
+                        <!--<div style="display: block">
+                            <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType">
+                        </canvas>
+                        </div>-->
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <h4 class="card-title text-center">{{ graficos.grafico4.leyenda }}</h4>
+
+                <div>
+                    <div>
+                        <app-grafico-donna [chartLabels]="graficos.grafico4.labels" [chartData]="graficos.grafico4.data" [chartType]="graficos.grafico4.type"></app-grafico-donna>
+                        <!--<div style="display: block">
+                            <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType">
+                        </canvas>
+                        </div>-->
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
+
+
+</div>
